objects/Account.object
<CustomObject>
    <fields>
        <fullName>CloseAllOpps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close All Opps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Opp__c</fullName>
        <label>Max Opp</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Contacts__c</fullName>
        <label>Number Of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Products__c</fullName>
        <label>Number of Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>